4th-year/compiler-construction/compiler-construction-assignment-1/tests/negative-tests/invalid-numbers.ccl
main
{
    // should produce errors:
    var number:integer;

    number = 05;
}